set min-width of column1 to prevent it from getting too small

--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -541,6 +541,7 @@ input:focus {
   div.column1 {
     display: block;
     margin: 0 auto;
+    min-width: 226px;
   }
 
 }
